# --_lab4

./: CMakeLists.txt  SeqCont.h  allocator.h  factorial.h  lab4.cpp
.github/workflows/: release.yml
